Add - esercizio pari e dispari

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Paliesdispari</title>
 </head>
 <body>
- <script src="./palindroma.js"></script>
+ <!-- <script src="./palindroma.js"></script> -->
  <script src="./pariedispari.js"></script>   
 </body>
 </html>
